feat: Add optional E2E tests with real Ollama embeddings (#530)
Implements Phase 3 of the vector search test refactoring plan with optional
end-to-end tests that validate semantic similarity using real Ollama embeddings.

Changes:
- Add VectorSearchE2ETest with 2 E2E test cases
  * endToEnd_realEmbeddings_shouldFindSimilarContent: validates actual semantic search quality
  * endToEnd_realEmbeddings_shouldValidateDimensions: verifies embedding dimensions from real model
- Configure Maven profile 'e2e-tests' for optional execution
- Exclude E2E tests from default test runs to maintain fast development workflow
- Add comprehensive documentation with usage instructions and troubleshooting

Test Infrastructure:
- Uses Testcontainers for ArcadeDB and Ollama
- Pulls nomic-embed-text model (768 dimensions)
- Real OllamaEmbeddingAdapter (not fake embeddings)
- Complete integration: database + embeddings + services

Usage:
- Run E2E tests: mvn test -Pe2e-tests
- Normal tests (E2E excluded): mvn test

Trade-offs:
- Slow: ~2-3 minutes per test suite (model loading)
- Large: ~400MB Ollama image download
- Optional: not run by default, suitable for pre-release validation

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>